...
  static func startGameDataSource() -> ButtonTypeCellDataSource {
    var dataSource = ButtonTypeCellDataSource(
      title: "試合開始",
      accessoryType: .none)
    dataSource.titleColor = .red
    dataSource.fontWeight = .bold
    dataSource.accessibilityLabel = "GameStartCell"
    return dataSource
  }
  
  static func memorizeTimerDataSource() -> ButtonTypeCellDataSource {
    var dataSource = ButtonTypeCellDataSource(
      title: "暗記時間タイマー",
...
